--- a/style.css
+++ b/style.css
@@ -28,4 +28,9 @@ section{
 }
 .top-banner{
     background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
