--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 30px;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
@@ -36,4 +40,26 @@ section{
 }
 p{
     text-align: justify;
+}
+.experience-area{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 10px ;
+}
+#full-stuck{
+    border-left: 5px solid tomato;
+}
+#baby-web{
+    border-left: 5px solid green ;
+}
+footer p{
+    text-align: center;
+    color: blueviolet;
 }
